# blueyeSIM

./: .gitignore  .gitmodules  README.md  dep_install.sh  frames_2025-04-12_00.10.29.gv  frames_2025-04-12_00.13.02.gv  frames_2025-04-12_00.35.30.gv  frames_2025-04-14_11.50.36.gv  mission.json  set_env  statistical_values.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  (+1 more)
install/mundus_mir_stonefish_docking_controller/share/mundus_mir_stonefish_docking_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mundus_mir_stonefish_docking_controller/share/mundus_mir_stonefish_docking_controller/config/: stonefish_robot_localization.yaml
install/mundus_mir_waypoint_controller/share/mundus_mir_waypoint_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mundus_mir_waypoint_controller/share/mundus_mir_waypoint_controller/cmake/: mundus_mir_waypoint_controllerConfig.cmake
src/blueye_altitude_controller/: CMakeLists.txt  package.xml
src/blueye_altitude_controller/include/blueye_altitude_controller/: altitude_controller.hpp
src/blueye_altitude_controller/launch/: altitude_controller.launch.py
src/blueye_altitude_controller/src/: altitude_controller.cpp  main.cpp
src/blueye_gui/: package.xml  setup.cfg  setup.py
src/blueye_gui/blueye_gui/: blueye_gui.py
src/blueye_real_bt/: CMakeLists.txt  README.md  package.xml
src/blueye_real_bt/bash_scripts/: launch_docking_real.sh  launch_mission.sh  launch_undocking_real.sh  record_full_mission.sh  record_sim_mission.sh  statistical_values.txt
src/blueye_real_bt/behavior_trees/: FullMission.xml  Mission.xml  MissionWithTakeover.xml  TestBatteryCondition.xml  TestDocking.xml  TestGotoWaypoint.xml  TestUndocking.xml
src/blueye_real_bt/launch/: blueye_real_bt.launch.py
src/blueye_real_bt/scripts/: blueye_rov_trajectory.html  goto_waypoint.py  goto_waypoint_cc.py  map_trajectory.py  plot_mission.py  rov_trajectory_data.json  rov_trajectory_map.html  static_map_plotter.py
src/blueye_real_bt/scripts/mission_planner_scripts/: mission.json  mission.py  reset_drone_position.py  test_depth_hold_joystick.py  test_motion_during_pause.py  test_pause_at_depth.py  test_pause_resume_surface.py  undocking.py
src/blueye_real_bt/src/: main.cpp
src/blueye_real_bt/src/behaviors/: activate_auto_modes.cpp  goto_waypoint.cpp  goto_waypoint_cc.cpp  launch_docking_real.cpp  launch_mission_procedure.cpp  launch_undocking_real.cpp  publish_state.cpp  wait_node_real.cpp
src/blueye_real_bt/src/conditions/: BatteryLevelCondition.cpp
src/blueye_stonefish_bt/: CMakeLists.txt  package.xml
src/blueye_stonefish_bt/behavior_trees/: Docking.xml  DockingTest.xml  Homing.xml  MissionControl.xml  PipelineInspection.xml  SimpleMission.xml  TestMission.xml  TestMissionResume.xml  Transit_1.xml  Transit_2.xml  UnDocking.xml  WreckageInspection.xml
src/blueye_stonefish_bt/launch/: blueye_stonefish_bt.launch.py
src/blueye_stonefish_bt/src/: main.cpp
src/blueye_stonefish_bt/src/actions/: altitude_control_action.cpp  publish_state.cpp
src/blueye_stonefish_bt/src/behaviors/: launch_docking_procedure.cpp  navigate_to_waypoint.cpp  station_keeping.cpp  wait_node.cpp
src/blueye_stonefish_bt/src/conditions/: battery_condition.cpp  blackboard_condition.cpp  camera_condition.cpp  sonar_condition.cpp  system_watchdog.cpp
src/blueye_visualization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/blueye_visualization/blueye_visualization/: operator_hud.py
src/blueye_visualization/launch/: visualization.launch.py
src/blueye_visualization/scripts/: rov_visual_2d_xy.py  rov_visual_2d_z.py  rov_viz_matplotlib_3d.py
src/gz_battery/: CMakeLists.txt  package.xml
src/gz_battery/include/gz_battery/: gz_battery.h
src/gz_battery/src/: gz_battery.cpp  main.cpp
src/mundus_mir_blueye_joystick_cpp/: CMakeLists.txt  package.xml
src/mundus_mir_blueye_joystick_cpp/include/mundus_mir_blueye_joystick_cpp/: mundus_mir_blueye_joystick_cpp.hpp
src/mundus_mir_blueye_joystick_cpp/launch/: mundus_mir_joystick_controller.launch.py
src/mundus_mir_blueye_joystick_cpp/src/: main.cpp  mundus_mir_blueye_joystick_cpp.cpp
src/mundus_mir_docking_controller/: README.md  package.xml  setup.cfg  setup.py
src/mundus_mir_docking_controller/config/: robot_localization.yaml
src/mundus_mir_docking_controller/launch/: docking.launch.py  integrated_docking.launch.py  statistical_values.txt
src/mundus_mir_docking_controller/mundus_mir_docking_controller/: aruco_board_actual_sim.py  blueye_camera_node.py  blueye_commands.py  docking_control.py  dvl_and_imu_republisher_sim.py  keyboard_controller.py  pose_estimation_aruco.py
src/mundus_mir_docking_controller/urdf/: base.urdf.xml
src/mundus_mir_msgs/: CMakeLists.txt  README.md
src/mundus_mir_msgs/msg/: BatteryStatus.msg
src/mundus_mir_msgs/srv/: GetWaypoints.srv  GoToWaypoints.srv
src/mundus_mir_pid_siso_cpp/: CMakeLists.txt  README.md  package.xml
src/mundus_mir_pid_siso_cpp/include/: pid_siso.hpp
src/mundus_mir_pid_siso_cpp/src/: pid_siso.cpp
src/mundus_mir_simulator/mundus_mir_perception/simple_3d_mapper/: CMakeLists.txt  package.xml
src/mundus_mir_vehicle_interfaces/: CMakeLists.txt  README.md
src/mundus_mir_vehicle_interfaces/include/mundus_mir_vehicle_interfaces/: blueye_simulator_interface.hpp
src/mundus_mir_vehicle_interfaces/launch/: blueye_simulator_interface.launch.py  stonefish_blueye_control.launch.py
src/mundus_mir_vehicle_interfaces/src/: blueye_simulator_interface.cpp  main.cpp
src/mundus_mir_velocity_controller_4dof/: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/mundus_mir_velocity_controller_4dof/include/: velocity_controller_4dof.hpp
src/mundus_mir_velocity_controller_4dof/src/: velocity_controller_4dof.cpp
src/mundus_mir_waypoint_controller/: CMakeLists.txt  README.md
src/mundus_mir_waypoint_controller/include/mundus_mir_waypoint_controller/: mundus_mir_waypoint_controller.hpp
src/mundus_mir_waypoint_controller/src/: main.cpp  mundus_mir_waypoint_controller.cpp
(+1734 files in other folders)
