<?xml version="1.0"?>
<package format="3">
  <name>gz_battery</name>
  <version>0.0.0</version>
  <description>Battery simulation and message package for underwater robots.</description>

  <maintainer email="gabriele.kasparaviciute@ntnu.no">GabrieleNTNU</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>mundus_mir_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
