<?xml version="1.0"?>
<package format="3">
  <name>mundus_mir_docking_controller</name>
  <version>0.0.1</version>
  <description>Integrated docking controller package for Blueye AUVs</description>
  <maintainer email="gabriele.kasparaviciute@ntnu.no">Gabriele</maintainer>
  <license>MIT</license>

  <!-- ROS 2 core dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>

  <!-- Blueye-specific dependencies -->
  <depend>blueye_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

