<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mundus_mir_waypoint_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ambjorn.waldum@ntnu.no">urlaxle</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>mundus_mir_msgs</depend>
  <depend>marine_acoustic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
